CHORE: Add jbcrypt dependency

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
 			<version>8.4.0</version>
 		</dependency>
 
+		<!-- JBCrypt -->
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
+
 		<!-- Swagger -->
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
