--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 security.jwt.secret=dmFtb3MgYSBnYW5hYWFhYWFhYWFhYWFhYWFhYWFhYXI=
 security.jwt.expiration=86400000
+security.api.public-endpoints=/auth/**
