FEAT: Add openapi into public routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 security.jwt.secret=dmFtb3MgYSBnYW5hYWFhYWFhYWFhYWFhYWFhYWFhYXI=
 security.jwt.expiration=86400000
-security.api.public-endpoints=/auth/**
+security.api.public-endpoints=/auth/**, /openapi*
