--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
 			<version>0.12.6</version>
 		</dependency>
 
+		<!-- Jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.17.2</version>
+		</dependency>
+
 		<!-- Validations -->
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
