FEAT: Add validations in routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # Security
 security.jwt.secret=dmFtb3MgYSBnYW5hYWFhYWFhYWFhYWFhYWFhYWFhYXI=
 security.jwt.expiration=86400000
-security.api.public-endpoints=/auth/**, /openapi*
+security.api.public-endpoints=/auth/login, /openapi*
+security.api.admin-endpoints=/auth/register
+security.api.vet-endpoints=
 security.cors.allowed-origins=http://localhost:5173
 security.cors.allowed-methods=GET, POST, PUT, DELETE, OPTIONS
 security.cors.allowed-headers=*
