--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<wildfly-plugin.version>4.2.1.Final</wildfly-plugin.version>
 		<org.mapstruct.version>1.6.2</org.mapstruct.version>
 		<weld.version>5.0.Final</weld.version>
-		<log.level>INFO</log.level>
+		<log.level>DEBUG</log.level>
 		<log.pattern>%K{level}%d{HH:mm:ss} %-6p(%t) %s%e%n</log.pattern>
 	</properties>
 
