FEAT: Add user secret

--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -19,7 +19,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             sudo fuser -k 8080/tcp || echo "No process running on port 8080"
-            rm -rf /home/azureuser/api.vet-manager-hc
+            rm -rf /home/${{ secrets.USER }}/api.vet-manager-hc
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,7 +32,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           source: .
-          target: /home/azureuser/api.vet-manager-hc
+          target: /home/${{ secrets.USER }}/api.vet-manager-hc
 
       - name: Run the api
         uses: appleboy/ssh-action@v1.0.3
@@ -42,10 +42,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd /home/azureuser/api.vet-manager-hc
+            cd /home/${{ secrets.USER }}/api.vet-manager-hc
             chmod -R 755 ./mvnw
             chmod -R 755 ./config-server
-            nohup bash -c 'cd /home/azureuser/api.vet-manager-hc && \
+            nohup bash -c 'cd /home/${{ secrets.USER }}/api.vet-manager-hc && \
                 ./mvnw clean install -Pproduction && \
                 ./config-server ${{ secrets.ADMIN_USERNAME }} ${{ secrets.ADMIN_PASSWORD }} ${{ secrets.DB_URL }} ${{ secrets.DB_USERNAME }} ${{ secrets.DB_PASSWORD }} && \
                 ./mvnw wildfly:run -Pproduction' \
