--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
 			<version>3.2.0</version>
 		</dependency>
 
+		<!-- Jansi -->
+		<dependency>
+			<groupId>org.fusesource.jansi</groupId>
+			<artifactId>jansi</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+
 		<!-- JWT -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
