--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,12 +45,12 @@
     </filter-mapping>
 
     <filter>
-        <filter-name>LogginFilter</filter-name>
-        <filter-class>com.vet.hc.api.shared.adapter.in.filter.LogginFilter</filter-class>
+        <filter-name>LoggingFilter</filter-name>
+        <filter-class>com.vet.hc.api.shared.adapter.in.filter.LoggingFilter</filter-class>
     </filter>
 
     <filter-mapping>
-        <filter-name>LogginFilter</filter-name>
+        <filter-name>LoggingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 </web-app>
