--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ security.jwt.expiration=86400000
 security.api.public-endpoints=/auth/login, /openapi*
 security.api.admin-endpoints=/auth/register
 security.api.vet-endpoints=
-security.cors.allowed-origins=*
+security.cors.allowed-origins=http://localhost:5173
 security.cors.allowed-methods=GET, POST, PUT, DELETE, OPTIONS
 security.cors.allowed-headers=*
