--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -12,6 +12,12 @@ logging:
 
   file:
     path: logs
+    name: logs/vet-manager-hc.log
+
+  threshold:
+    console: INFO
+
+  config: classpath:logback-prod.xml
 
 # Hikari
 spring:
@@ -27,10 +33,6 @@ spring:
       idle-timeout: 30000
       max-lifetime: 60000
       auto-commit: true
-
-  jpa:
-    hibernate:
-      ddl-auto: create
 
 # Swagger
 springdoc:
