FIX: Update logging configuration

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ server:
 # Logger
 logging:
   level:
-    "[xyz.cupscoffee]": DEBUG
+    "[com.vet.hc.api]": DEBUG
 
   pattern:
     dateformat: HH:mm:ss
