--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -30,6 +30,10 @@ spring:
       max-lifetime: 60000
       auto-commit: true
 
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+
 # Swagger
 springdoc:
   api-docs:
