REFACTOR: Update launch configuration for production profile and adjust logging appender class reference

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "mainClass": "com.vet.hc.api.VetManagerHCApiApplication",
             "projectName": "vet-manager-hc-api",
-            "args": "--spring.profiles.active=dev"
+            "args": "--spring.profiles.active=prod"
         }
     ]
 }
