--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -62,4 +62,5 @@ jobs:
                 --spring.datasource.url=${{ secrets.DB_URL }} \
                 --spring.datasource.username=${{ secrets.DB_USERNAME }} \
                 --spring.datasource.password=${{ secrets.DB_PASSWORD }} \
+                --security.jwt.secret=${{ secrets.JWT_SECRET }} \
                 > output.log 2>&1 &
