--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "mainClass": "com.vluepixel.vetmanager.api.VetManagerHCApiApplication",
             "projectName": "vet-manager-hc-api",
-            "args": "--spring.profiles.active=dev"
+            "args": "--spring.profiles.active=test"
         }
     ]
 }
