--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,8 +9,7 @@ logging:
 
   pattern:
     dateformat: HH:mm:ss
-    console:
-      "%clr(%d{HH:mm:ss}){faint} %highlight(%-5level) ---
+    console: "%clr(%d{HH:mm:ss}){faint} %highlight(%-5level) ---
       [%clr(${spring.application.name:-}){yellow}] %clr(%-45.45logger{45}){cyan}
       %clr(:){faint} %m%n"
 
