Update User Email Tested has been implemented but i found two errors that directly sends and internal error, issues #11 and #25

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -11,8 +11,7 @@ logging:
 
   pattern:
     dateformat: HH:mm:ss
-    console:
-      "%clr(%d{HH:mm:ss}){faint} %highlight(%-5level) ---
+    console: "%clr(%d{HH:mm:ss}){faint} %highlight(%-5level) ---
       [%clr(${spring.application.name:-}){yellow}] %clr(%-45.45logger{45}){cyan}
       %clr(:){faint} %m%n"
 
