refactor: Update project name to 'Vet Manager'

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Vet Manager HC API",
+            "name": "Vet Manager API",
             "request": "launch",
             "mainClass": "com.vluepixel.vetmanager.api.VetManagerHCApiApplication",
             "projectName": "vet-manager-api",
